--- a/TimeSeriesFilter.TerminalOld/View/GaussianProcessUserControl.xaml
+++ b/TimeSeriesFilter.TerminalOld/View/GaussianProcessUserControl.xaml
@@ -1,94 +1,103 @@
 ﻿<UserControl x:Class="TimeSeriesFilterSharp.View.GaussianProcessUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-
-    xmlns:local="clr-namespace:TimeSeriesFilterSharp.View"
-                     xmlns:oxy="http://oxyplot.org/wpf"
-        xmlns:pt="http://propertytools.org/wpf" 
-             mc:Ignorable="d" 
-        
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:FilterSharp.ViewModel"
+             xmlns:local="clr-namespace:TimeSeriesFilterSharp.View"
+             xmlns:pt="http://propertytools.org/wpf"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400">
+    <FrameworkElement.Resources>
+        <DataTemplate DataType="{x:Type vm:GaussianProcessActionViewModel}">
+
+            <Viewbox Height="60">
+                <UniformGrid Rows="1">
+                    <Button Height="30" Width="60" Command="{Binding Add}" Content="Add" Margin="10" />
+                    <Button Height="30" Width="60"  Command="{Binding Run}"  Content="Run" Margin="10" />
+                    <TextBlock Text="{Binding Result}" Margin="10" />
+                </UniformGrid>
+            </Viewbox>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:GaussianProcessConfigurationViewModel}">
+            <UniformGrid DockPanel.Dock="Top" Height="60" Rows="1">
+                <!--<pt:PropertyGrid SelectedObject="{Binding  }"></pt:PropertyGrid>-->
+
+                <UniformGrid Rows="1" Margin="10,0">
+                    <Label Content="Kernel" VerticalAlignment="Center" HorizontalAlignment="Right"></Label>
+                    <ComboBox Height="30" Grid.Row="1" Width="160" Margin="10" ItemsSource="{Binding Kernels}"
+                          DisplayMemberPath="Key"
+                          SelectedValuePath="Value"
+                          SelectedValue="{Binding Kernel}" />
+                </UniformGrid>
+                <UniformGrid Rows="1" Margin="10,0">
+                    <Label Content="Noise" VerticalAlignment="Center" HorizontalAlignment="Right"></Label>
+                    <pt:SpinControl Value="{Binding Noise}"  Height="30"  Width="60" Margin="10" Minimum="0" Maximum="2" SmallChange="0.01" LargeChange="0.2">
+                        <TextBox Text="{Binding Noise}" BorderThickness="0" HorizontalContentAlignment="Center" />
+                    </pt:SpinControl>
+                </UniformGrid>
+
+                <UniformGrid Rows="1" Margin="10,0">
+                    <Label Content="Length" VerticalAlignment="Center" HorizontalAlignment="Right"></Label>
+                    <pt:SpinControl Value="{Binding Length}"  Height="30"  Width="60" Margin="10" Minimum="0.01" Maximum="5" SmallChange="0.01" LargeChange="0.2">
+                        <TextBox Text="{Binding Length}" BorderThickness="0" HorizontalContentAlignment="Center" />
+                    </pt:SpinControl>
+                </UniformGrid>
+            </UniformGrid>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:GaussianProcessResultsViewModel}">
+            <Grid>
+                <local:PredictionUserControl DataContext="{Binding}" />
+            </Grid>
+        </DataTemplate>
+
+        <vm:GaussianProcessViewModel x:Key="GaussianProcessViewModel" />
+    </FrameworkElement.Resources>
 
     <TabControl>
-        <TabItem Header="Main"  DataContext="{Binding gpvm1}">
-            <DockPanel>
-
-                <UniformGrid DockPanel.Dock="Top" Height="60"  Rows="1">
-                    <Viewbox>
-                        <Grid >
-                            <UniformGrid Rows="1">
-                                <Button Height="30" Width="60" Click="ButtonAdd_Click" Content="Add" Margin="10"/>
-                                <Button Height="30" Width="60" Click="ButtonRun_Click" Content="Run" Margin="10"/>
-                            </UniformGrid>
-
-
-                        </Grid>
-                    </Viewbox>
-
-                </UniformGrid>
-                <UniformGrid DockPanel.Dock="Top" Height="60" Rows="1">
-                    <!--<pt:PropertyGrid SelectedObject="{Binding  }"></pt:PropertyGrid>-->
-
-                    <ComboBox Height="30" Grid.Row="1" Width="160" Margin="10" ItemsSource="{Binding Kernels}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding Kernel}" SelectedIndex="0"/>
-
-                    <UniformGrid Rows="1">
-                        <Label Content="Noise"></Label>
-                        <pt:SpinControl Value="{Binding Noise}"  Height="30"  Width="60" Margin="10" Minimum="0" Maximum="2" SmallChange="0.01" LargeChange="0.2">
-
-                            <TextBox Text="{Binding Noise}" BorderThickness="0" HorizontalContentAlignment="Center"/>
-
-                        </pt:SpinControl>
-
-                    </UniformGrid>
-
-                    <UniformGrid Rows="1">
-                        <Label Content="Length"></Label>
-                        <pt:SpinControl Value="{Binding Length}"  Height="30"  Width="60" Margin="10" Minimum="0.01" Maximum="5" SmallChange="0.01" LargeChange="0.2">
-
-                            <TextBox Text="{Binding Length}" BorderThickness="0" HorizontalContentAlignment="Center"/>
-
-                        </pt:SpinControl>
-
-                    </UniformGrid>
-                </UniformGrid>
-                <local:PredictionUserControl  DataContext="{Binding}"></local:PredictionUserControl>
-
-            </DockPanel>
+        <TabItem Header="Main"  DataContext="{StaticResource GaussianProcessViewModel}">
+            <ListBox ItemsSource="{Binding Children}">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="DockPanel.Dock" Value="Top"></Setter>
+                        <Setter Property="VerticalContentAlignment" Value="Stretch"></Setter>
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"></Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <DockPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ListBox>
         </TabItem>
 
-        <TabItem Header="Secondary" DataContext="{Binding gpvm2}">
+        <TabItem Header="Secondary" x:Name="Secondary">
 
             <DockPanel>
-                <Viewbox DockPanel.Dock="Top" Height="30"  >
+                <Viewbox DockPanel.Dock="Top" Height="30">
                     <UniformGrid Rows="1">
-                        <Button Height="30" Width="100" Click="ButtonSample_Click" Content="Sample" Margin="2"/>
+                        <Button Height="30" Width="100" Click="ButtonSample_Click" Content="Sample" Margin="2" />
                     </UniformGrid>
                 </Viewbox>
 
                 <local:PredictionUserControl  DataContext="{Binding}"></local:PredictionUserControl>
             </DockPanel>
-
         </TabItem>
 
-
-
-        <TabItem Header="Dynamic"  DataContext="{Binding gpvm3}">
+        <!--<TabItem Header="Dynamic"  DataContext="{Binding gpvm3}">
             <DockPanel>
-                <Viewbox DockPanel.Dock="Top" Height="30"  >
+                <Viewbox DockPanel.Dock="Top" Height="30">
                     <UniformGrid Rows="1">
 
-                        <Button Height="30" Width="60" Click="ButtonRunDynamic_Click" Content="Run" Margin="10"/>
-
+                        <Button Height="30" Width="60" Click="ButtonRunDynamic_Click" Content="Run" Margin="10" />
                     </UniformGrid>
                 </Viewbox>
 
-                <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" DockPanel.Dock="Top" >
-
+                <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" DockPanel.Dock="Top">
                     <local:PredictionUserControl  DataContext="{Binding}"></local:PredictionUserControl>
                 </Grid>
             </DockPanel>
-        </TabItem>
+        </TabItem>-->
     </TabControl>
 </UserControl>
