--- a/TimeSeriesFilter.TerminalOld/View/PredictionUserControl.xaml
+++ b/TimeSeriesFilter.TerminalOld/View/PredictionUserControl.xaml
@@ -1,41 +1,35 @@
 ﻿<UserControl x:Class="TimeSeriesFilterSharp.View.PredictionUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-
-                     xmlns:oxy="http://oxyplot.org/wpf"
-        xmlns:pt="http://propertytools.org/wpf" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:FilterSharp.ViewModel"
+             d:DataContext="{d:DesignInstance vm:PredictionViewModel}"
+             xmlns:oxy="http://oxyplot.org/wpf"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-
         <TabControl>
             <TabItem Header="Graph">
-                <Grid>
-                    
-   
-                <oxy:Plot  x:Name="Plot1" Grid.Column="0"  >
-                    <oxy:Plot.Series>
-                        <oxy:ScatterSeries Name="mseries" ItemsSource="{Binding Measurements}"   Title="Measurement"   DataFieldX="Key" DataFieldY="Value" MarkerSize="4" MarkerFill="Red" MarkerType="Square"/>
-
-                        <oxy:AreaSeries Name="aeseries" ItemsSource="{Binding Estimates}"  Title="Estimate Deviation"    DataFieldX="Time" DataFieldY="LowerDeviation" DataFieldX2="Time" DataFieldY2="UpperDeviation" />
-
-                        <oxy:LineSeries Name="leseries" ItemsSource="{Binding Estimates}"  Title="Estimate"    DataFieldX="Time" DataFieldY="Value"  />
-
-                    </oxy:Plot.Series>
-                    <oxy:Plot.Axes>
-                        <oxy:DateTimeAxis Position="Bottom"/>
-                        <oxy:LinearAxis Position="Left"/>
-                    </oxy:Plot.Axes>
-                </oxy:Plot>
+                <Grid MinWidth="100" MinHeight="100">
+                    <oxy:Plot  x:Name="Plot1" Grid.Column="0">
+                        <oxy:Plot.Series>
+                            <oxy:ScatterSeries Name="mseries" ItemsSource="{Binding Measurements}"   Title="Measurement"   DataFieldX="Key" DataFieldY="Value" MarkerSize="4" MarkerFill="Red" MarkerType="Square" />
+                            <oxy:AreaSeries Name="aeseries" ItemsSource="{Binding Estimates}"  Title="Estimate Deviation"    DataFieldX="Time" DataFieldY="LowerDeviation" DataFieldX2="Time" DataFieldY2="UpperDeviation" />
+                            <oxy:LineSeries Name="leseries" ItemsSource="{Binding Estimates}"  Title="Estimate"    DataFieldX="Time" DataFieldY="Value" />
+                        </oxy:Plot.Series>
+                        <oxy:Plot.Axes>
+                            <oxy:DateTimeAxis Position="Bottom" />
+                            <oxy:LinearAxis Position="Left" />
+                        </oxy:Plot.Axes>
+                    </oxy:Plot>
                 </Grid>
             </TabItem>
             <TabItem Header="DataTable">
-                <DataGrid  Grid.Column="1" x:Name="DataGrid1" 
-                    HorizontalAlignment="Stretch" 
+                <DataGrid  Grid.Column="1" x:Name="DataGrid1"
+                    HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
-                    ItemsSource="{Binding Estimates}"/>
+                    ItemsSource="{Binding Estimates}" />
             </TabItem>
         </TabControl>
     </Grid>
